--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "hydro_back",
+  "name": "ledfit_back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +15,6 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.6",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
